feat(web): 优化工单反馈和异常处理功能
- 添加 SKU 特征推荐功能
- 优化用户特征展示逻辑
- 调整反馈和异常处理界面布局
- 完善工单状态显示逻辑
- 修复部分功能按钮显示和隐藏的问题

--- a/web/templates/new_user_profile_content.hbs
+++ b/web/templates/new_user_profile_content.hbs
@@ -40,7 +40,7 @@
             <svg t="1739351799066" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="63641" width="18" height="18"><path d="M459.157333 637.333333A128.746667 128.746667 0 0 0 512 533.482667c0-71.146667-57.728-128.874667-128.874667-128.874667s-128.874667 57.728-128.874666 128.874667c0 42.666667 20.8 80.362667 52.842666 103.850666a171.776 171.776 0 0 0-94.165333 132.416h65.024a107.392 107.392 0 0 1 210.389333 0h65.002667a171.370667 171.370667 0 0 0-94.186667-132.416z m-76.032-39.424a64.426667 64.426667 0 1 1 0.021334-128.874666 64.426667 64.426667 0 0 1-0.021334 128.874666z" fill="#00cf7a" p-id="63642"></path><path d="M838.741333 168.341333h-111.957333V114.645333c0-17.834667-14.378667-32.213333-32.213333-32.213333s-32.213333 14.378667-32.213334 32.213333v53.696H361.642667V114.645333c0-17.834667-14.378667-32.213333-32.213334-32.213333s-32.213333 14.378667-32.213333 32.213333v53.696H185.258667a85.888 85.888 0 0 0-85.909334 85.909334v601.408a85.888 85.888 0 0 0 85.909334 85.909333h653.504a85.888 85.888 0 0 0 85.909333-85.909333V254.250667a85.909333 85.909333 0 0 0-85.930667-85.909334z m21.482667 665.834667c0 23.68-19.264 42.965333-42.965333 42.965333H189.824c-23.68 0-26.048-19.264-26.048-42.965333V275.733333c0-23.68 2.346667-42.965333 26.048-42.965333h107.392v53.696c0 17.834667 14.378667 32.213333 32.213333 32.213333s32.213333-14.378667 32.213334-32.213333v-53.696h300.714666v53.696c0 17.834667 14.378667 32.213333 32.213334 32.213333s32.213333-14.378667 32.213333-32.213333v-53.696h90.474667c23.68 0 42.965333 19.264 42.965333 42.965333v558.442667z" fill="#00cf7a" p-id="63643"></path><path d="M737.536 640.874667h-64.426667c-17.834667 0-32.213333 14.378667-32.213333 32.213333s14.378667 32.213333 32.213333 32.213333h64.426667c17.834667 0 32.213333-14.378667 32.213333-32.213333s-14.378667-32.213333-32.213333-32.213333zM780.48 469.034667h-150.357333c-17.834667 0-32.213333 14.378667-32.213334 32.213333s14.378667 32.213333 32.213334 32.213333h150.357333c17.834667 0 32.213333-14.378667 32.213333-32.213333a32.149333 32.149333 0 0 0-32.213333-32.213333z" fill="#00cf7a" p-id="63644"></path></svg>
         </div>
         <div class="title-text">
-            公开资料 <span class="green">3</span>
+            公开资料 <span class="green">{{info_list.length}}</span>
         </div>
     </div>
     {{!-- <div class="intro-info-list">
@@ -52,33 +52,17 @@
                 <img class="imgs" src="https://img1.baidu.com/it/u=360921970,1201638078&fm=253&fmt=auto&app=138&f=PNG?w=500&h=500" alt="">
             </div>
         </div>
-        <div class="info-box">
-            <div class="info-title">
-                抖音2024百大博主
-            </div>
-            <div class="intro-img">
-                <img class="imgs" src="https://img1.baidu.com/it/u=360921970,1201638078&fm=253&fmt=auto&app=138&f=PNG?w=500&h=500" alt="">
-            </div>
-        </div>
-        <div class="info-box">
-            <div class="info-title">
-                抖音2024百大博主
-            </div>
-            <div class="intro-img">
-                <img class="imgs" src="https://img1.baidu.com/it/u=360921970,1201638078&fm=253&fmt=auto&app=138&f=PNG?w=500&h=500" alt="">
-            </div>
-        </div>
     </div> --}}
-    {{#if info_list}}
     <div class="info-url-list">
+    {{#if info_list}}
         {{#each info_list}}
         <div class="url-item">
             <span class="url-label">{{infoName}}</span>
             <a href="{{infoUrl}}" class="url-value" target="_blank">{{infoUrl}}</a>
         </div>
         {{/each}}
-    </div>
     {{/if}}
+    </div>
 </div>
 <div class="intro-box">
     <div class="intro-box-title">
