--- a/web/templates/user_work_excep.hbs
+++ b/web/templates/user_work_excep.hbs
@@ -9,7 +9,7 @@
 </div>
 <div class="work-builder-info">
     <div class="info-top">
-        <span class="info-label">创建人</span>
+        <span class="info-label">{{#if isFromList}}参与人{{else}}创建人{{/if}}</span>
         <div class="value">{{creater.full_name}}</div>
     </div>
     <div class="info-content">
