refactor(web): 调整消息时间显示和控件的逻辑
- 将消息时间显示和控件的渲染逻辑移入 include_sender 条件内
- 优化了代码结构，提高了模板的可读性和维护性

--- a/web/templates/message_body.hbs
+++ b/web/templates/message_body.hbs
@@ -23,19 +23,22 @@
 {{/if}}
 
 <span class="alert-msg"></span>
-
-<a {{#unless msg/locally_echoed}}href="{{ msg/url }}"{{/unless}} class="message_time{{#if status_message}} status-time{{/if}}">
-    {{#unless include_sender}}
-    <span class="copy-paste-text">&nbsp;</span>
-    {{/unless}}
-    {{timestr}}
-</a>
+{{#if include_sender}}
+    <a {{#unless msg/locally_echoed}}href="{{ msg/url }}"{{/unless}} class="message_time{{#if status_message}} status-time{{/if}}">
+        {{#unless include_sender}}
+        <span class="copy-paste-text">&nbsp;</span>
+        {{/unless}}
+        {{timestr}}
+    </a>
+{{/if}}
 
 {{#if msg/locally_echoed}}
     <span class="fa fa-circle-o-notch slow-send-spinner hidden"></span>
 {{/if}}
 
-{{> message_controls}}
+{{#if include_sender}}
+    {{> message_controls}}
+{{/if}}
 
 {{#unless status_message}}
     {{#unless is_hidden}}
