refactor(web): 优化用户工作订单相关功能
- 修改齿轮菜单，添加用户头像
- 更新工作订单列表和详情页面样式
- 优化 URL 验证逻辑
- 调整工作订单相关模板

--- a/web/styles/subscriptions.css
+++ b/web/styles/subscriptions.css
@@ -1722,6 +1722,17 @@ div.settings-radio-input-parent {
 
     .work-sku-form {
         padding: 30px 20px;
+
+        .field {
+            box-sizing: border-box;
+
+            & input {
+                width: 100%;
+                box-sizing: border-box;
+                padding: 4px 6px;
+                height: 30px;
+            }
+        }
     }
 
     .custom_user_field {
