--- a/web/templates/compose.hbs
+++ b/web/templates/compose.hbs
@@ -98,6 +98,7 @@
                                     </div>
                                     {{> compose_control_buttons }}
                                 </div>
+                                {{#if false}}
                                 <div class="compose_bottom_bottom_container">
                                     <span id="compose_limit_indicator"></span>
                                     <div class="open_enter_sends_dialog">
@@ -116,6 +117,7 @@
                                         <i class="fa fa-caret-down" aria-hidden="true"></i>
                                     </div>
                                 </div>
+                                {{/if}}
                             </div>
                         </div>
                     </div>
