--- a/web/templates/stream_settings/work_sku_info.hbs
+++ b/web/templates/stream_settings/work_sku_info.hbs
@@ -10,7 +10,7 @@
 
         <div class="sku-section">
             <div class="sku-id">
-                #SKU{{detail.uuid}}
+                #{{detail.uuid}}
             </div>
             <div class="sku-sales">
                 <span>总交易额 {{#if detail.money}}{{detail.money}}{{else}}0{{/if}}</span>
