--- a/web/templates/user_work_detail.hbs
+++ b/web/templates/user_work_detail.hbs
@@ -1,5 +1,5 @@
 <div class="work-detail-header">
-    <span class="work-title work-detail-title">#GD{{detail.uuid}}</span>
+    <span class="work-title work-detail-title">#{{detail.uuid}}</span>
 
     {{#if isOutOfTime}}
     <span class="work-status user-work-join-statusx red" style="color: red;">提交已截止</span>
