--- a/web/templates/user_work_excep.hbs
+++ b/web/templates/user_work_excep.hbs
@@ -1,5 +1,5 @@
 <div class="work-detail-header">
-    <span class="work-title work-detail-title">#GD{{detail.uuid}}</span>
+    <span class="work-title work-detail-title">#{{detail.uuid}}</span>
     {{#if (eq detail.cyStatus 1)}}
     <span class="work-status user-work-join-status">已提交 待审核</span>
     {{/if}}
