--- a/web/templates/user_work_item.hbs
+++ b/web/templates/user_work_item.hbs
@@ -6,7 +6,7 @@
     {{#each workList}}
         <div class="work-item">
             <div class="work-item-header">
-                <span class="work-title">#GD{{uuid}}</span>
+                <span class="work-title">#{{uuid}}</span>
                 {{!-- <span class="work-status">已提交 待审核</span> --}}
             </div>
             <div class="work-item-content">
