feat(user-work-order): 优化工作订单界面显示
- 修改工作订单列表展示逻辑，根据订单类型显示不同的信息
- 更新工作订单列表的 HTML 结构，优化用户体验
- 调整工作流列表中收藏按钮的显示状态

--- a/web/templates/user_work_item.hbs
+++ b/web/templates/user_work_item.hbs
@@ -18,8 +18,12 @@
                     </div>
                 </div>
                 <div class="work-info">
+                    {{#if isMy}}
+                    <span class="work-label">创建时间</span>
+                    {{else}}
                     <span class="work-label">加入时间</span>
-                    <div class="value">{{endTime}}</div>
+                    {{/if}}
+                    <div class="value">{{created}}</div>
                 </div>
                 <div class="work-info">
                     <span class="work-label">工作流</span>
@@ -31,7 +35,11 @@
                 </div>
             </div>
             <div class="work-item-footer">
+                {{#if isMy}}
                 <button class="button small rounded compose_mobile_button" data-id="{{id}}">查看</button>
+                {{else}}
+                <button class="button small rounded compose_mobile_button" data-id="{{gongdanId}}">查看</button>
+                {{/if}}
             </div>
         </div>
     {{/each}}
