--- a/web/templates/new_user_profile_content.hbs
+++ b/web/templates/new_user_profile_content.hbs
@@ -75,7 +75,7 @@
     </div>
     <div class="intro-sku-list">
         {{#each sku_list}}
-        <div class="sku-item">
+        <div class="sku-item show-profile-sku-detail" data-sku-id="{{id}}">
             <div class="sku-img">
                 <img class="img" src="{{skuPic}}" alt="">
             </div>
