--- a/web/styles/popovers.css
+++ b/web/styles/popovers.css
@@ -644,6 +644,135 @@ ul {
             }
         }
     }
+
+    .new-style {
+        overflow: hidden;
+    }
+
+    .subscriptions-header {
+        padding: 12px;
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: 700;
+        border-bottom: 1px solid hsl(0deg 0% 87%);
+        position: absolute;
+        width: 100%;
+        background-color: #fff;
+        z-index: 9;
+        left: 101%;
+        transition: all 0.3s ease;
+        box-sizing: border-box;
+
+        .fa-chevron-left {
+            position: relative;
+            color: hsl(0deg 0% 67%);
+
+            float: left;
+            padding: 2px 10px;
+
+            cursor: pointer;
+
+            transition: all 0.3s ease;
+        }
+
+        .user-groups-title,
+        .subscriptions-title {
+            display: inline-block;
+            transition: all 0.3s ease;
+            transform: translate(-13px, 0);
+        }
+
+        .exit {
+            font-weight: 600;
+            position: absolute;
+            top: 10px;
+            right: 0;
+            color: hsl(0deg 0% 67%);
+            cursor: pointer;
+        }
+
+        &.show {
+            left: 0%;
+        }
+    }
+
+    .right {
+        position: absolute;
+        left: 101%;
+        width: 100%;
+        height: calc(100% - 45px);
+        border-radius: 4px;
+
+        top: 45px;
+        background-color: var(--color-background-modal);
+        border-top: none;
+
+        transition: all 0.3s ease;
+        z-index: 10;
+        overflow-y: auto;
+
+        &.show {
+            left: 0%;
+        }
+
+        .work-sku-detail {
+            padding: 20px 15px 50px;
+            height: 100%;
+            box-sizing: border-box;
+
+            .work-sku-title {
+                text-align: center;
+                font-size: 18px;
+                margin-bottom: 10px;
+                font-weight: 600;
+            }
+
+            .sku-cover .img ,
+            .sku-img-list .img {
+                width: 100%;
+            }
+
+            .sku-section {
+                padding: 20px 0;
+
+                .sku-id {
+                    font-size: 16px;
+                    font-weight: 600;
+                    margin-bottom: 5px;
+                }
+
+                .sku-sales {
+                    display: flex;
+                    flex-wrap: wrap;
+                    gap: 10px;
+                    padding: 0;
+                    margin: 0;
+                    font-size: 14px;
+                }
+
+                .section-title {
+                    font-size: 14px;
+                    font-weight: 600;
+                    margin-top: 10px;
+                    margin-bottom: 5px;
+                }
+
+                .sku-tags {
+                    display: flex;
+                    flex-wrap: wrap;
+                    gap: 8px;
+
+                    .tag {
+                        padding: 3px 10px;
+                        border: 1px solid #ccc;
+                        border-radius: 5px;
+                        font-size: 14px;
+                    }
+                }
+            }
+        }
+
+    }
 }
 
 @media (width < $md_min) {
@@ -1114,6 +1243,7 @@ ul {
             align-items: center;
             gap: 10px;
             margin-bottom: 5px;
+            cursor: pointer;
 
             .sku-info {
                 flex: 1;
