--- a/web/templates/user_group_list_item.hbs
+++ b/web/templates/user_group_list_item.hbs
@@ -1,5 +1,5 @@
 <tr data-group-id="{{group_id}}">
     <td class="group_list_item">
-        {{name}}
+        {{name}} - {{description}}
     </td>
 </tr>
