refactor(web): 调整右侧边栏高度计算并优化用户资料模态样式
- 在右侧边栏高度计算中减去 150 像素，以适应新的布局需求
- 修改用户资料模态中"认证"标签为"所属团队"，提高中文用户的可读性

--- a/web/templates/user_profile_modal.hbs
+++ b/web/templates/user_profile_modal.hbs
@@ -52,7 +52,7 @@
                             <div class="col-wrap col-left">
                                 {{#if groups_of_user.length}}
                                     <div class="default-field" style="margin-bottom: 10px;">
-                                        <div class="name">认证</div>
+                                        <div class="name">所属团队</div>
                                         {{!-- <div class="name">{{t "User groups" }}</div> --}}
                                         {{#each groups_of_user}}
                                             <div class="value">{{this.name}} - {{this.description}}</div>
